# broadcast-server

./: README.md  docker-compose.yml  dockerfile  pyproject.toml
frontend/: index.html  nginx.conf
frontend/css/: styles.css
frontend/js/: main.js
src/broadcast_server/: client.py  depends.py  main.py  server.py
