[project]
name = "broadcast-server"
version = "0.1.0"
description = ""
authors = [
    {name = "kavlan-dev",email = "kazancevvlad572@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets (>=16.0,<17.0)"
]

[tool.poetry]
packages = [{include = "broadcast_server", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
broadcast-server = "broadcast_server.main:main"